packages/flutter_wasmi/macos/Classes/frb.h

typedef struct _Dart_Handle* Dart_Handle;
typedef struct DartCObject DartCObject;
typedef struct wire_uint_8_list {
  uint8_t *ptr;
  int32_t len;
} wire_uint_8_list;
typedef struct DartCObject *WireSyncReturn;
typedef struct wire_Value2 {
  int32_t tag;
  union Value2Kind *kind;
} wire_Value2;
typedef struct wire_list_value_2 {
  struct wire_Value2 *ptr;
  int32_t len;
} wire_list_value_2;
typedef struct wire_WasmiInstanceId {
  uint32_t field0;
} wire_WasmiInstanceId;
typedef struct wire_WasmiModuleId {
  uint32_t field0;
} wire_WasmiModuleId;
void drop_dart_object(uintptr_t ptr);
uintptr_t new_dart_opaque(Dart_Handle handle);
intptr_t init_frb_dart_api_dl(void *obj);
void wire_parse_wat_format(int64_t port_, struct wire_uint_8_list *wat);
WireSyncReturn wire_run_function(int64_t pointer);
WireSyncReturn wire_run_wasm_func(uintptr_t pointer, struct wire_list_value_2 *params);
WireSyncReturn wire_run_wasm_func_mut(uintptr_t pointer, struct wire_list_value_2 *params);
WireSyncReturn wire_run_wasm_func_void(uintptr_t pointer, struct wire_list_value_2 *params);
WireSyncReturn wire_compile_wasm_sync(struct wire_uint_8_list *module_wasm);
void wire_compile_wasm(int64_t port_, struct wire_uint_8_list *module_wasm);
void wire_call_wasm(int64_t port_);
void wire_add(int64_t port_, int64_t a, int64_t b);
void wire_call_function__method__WasmiInstanceId(int64_t port_,
                                                 struct wire_WasmiInstanceId *that,
                                                 struct wire_uint_8_list *name);
WireSyncReturn wire_call_function_with_args_sync__method__WasmiInstanceId(struct wire_WasmiInstanceId *that,
                                                                          struct wire_uint_8_list *name,
                                                                          struct wire_list_value_2 *args);
void wire_call_function_with_args__method__WasmiInstanceId(int64_t port_,
                                                           struct wire_WasmiInstanceId *that,
                                                           struct wire_uint_8_list *name,
                                                           struct wire_list_value_2 *args);
WireSyncReturn wire_exports__method__WasmiInstanceId(struct wire_WasmiInstanceId *that);
WireSyncReturn wire_instantiate_sync__method__WasmiModuleId(struct wire_WasmiModuleId *that);
void wire_instantiate__method__WasmiModuleId(int64_t port_, struct wire_WasmiModuleId *that);
WireSyncReturn wire_get_module_imports__method__WasmiModuleId(struct wire_WasmiModuleId *that);
WireSyncReturn wire_get_module_exports__method__WasmiModuleId(struct wire_WasmiModuleId *that);
void wire_executions__method__WasmiModuleId(int64_t port_, struct wire_WasmiModuleId *that);
void wire_dispose__method__WasmiModuleId(int64_t port_, struct wire_WasmiModuleId *that);