packages/wasmi/lib/src/bridge_generated.io.dart


  late final _drop_dart_objectPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.UintPtr)>>(
          'drop_dart_object');
  late final _drop_dart_object =
      _drop_dart_objectPtr.asFunction<void Function(int)>();

  int new_dart_opaque(
    Object handle,
  ) {
    return _new_dart_opaque(
      handle,
    );
  }

  late final _new_dart_opaquePtr =
      _lookup<ffi.NativeFunction<ffi.UintPtr Function(ffi.Handle)>>(
          'new_dart_opaque');
  late final _new_dart_opaque =
      _new_dart_opaquePtr.asFunction<int Function(Object)>();

  int init_frb_dart_api_dl(
    ffi.Pointer<ffi.Void> obj,
  ) {
    return _init_frb_dart_api_dl(
      obj,
    );
  }

  late final _init_frb_dart_api_dlPtr =
      _lookup<ffi.NativeFunction<ffi.IntPtr Function(ffi.Pointer<ffi.Void>)>>(
          'init_frb_dart_api_dl');
  late final _init_frb_dart_api_dl = _init_frb_dart_api_dlPtr
      .asFunction<int Function(ffi.Pointer<ffi.Void>)>();

  void wire_parse_wat_format(
    int port_,
    ffi.Pointer<wire_uint_8_list> wat,
  ) {
    return _wire_parse_wat_format(
      port_,
      wat,
    );
  }

  late final _wire_parse_wat_formatPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Int64,
              ffi.Pointer<wire_uint_8_list>)>>('wire_parse_wat_format');
  late final _wire_parse_wat_format = _wire_parse_wat_formatPtr
      .asFunction<void Function(int, ffi.Pointer<wire_uint_8_list>)>();

  WireSyncReturn wire_run_function(
    int pointer,
  ) {
    return _wire_run_function(
      pointer,
    );
  }

  late final _wire_run_functionPtr =
      _lookup<ffi.NativeFunction<WireSyncReturn Function(ffi.Int64)>>(
          'wire_run_function');
  late final _wire_run_function =
      _wire_run_functionPtr.asFunction<WireSyncReturn Function(int)>();

  WireSyncReturn wire_run_wasm_func(
    int pointer,
    ffi.Pointer<wire_list_value_2> params,
  ) {
    return _wire_run_wasm_func(
      pointer,
      params,
    );
  }

  late final _wire_run_wasm_funcPtr = _lookup<
      ffi.NativeFunction<
          WireSyncReturn Function(ffi.UintPtr,
              ffi.Pointer<wire_list_value_2>)>>('wire_run_wasm_func');
  late final _wire_run_wasm_func = _wire_run_wasm_funcPtr.asFunction<
      WireSyncReturn Function(int, ffi.Pointer<wire_list_value_2>)>();

  WireSyncReturn wire_run_wasm_func_mut(
    int pointer,
    ffi.Pointer<wire_list_value_2> params,
  ) {
    return _wire_run_wasm_func_mut(
      pointer,
      params,
    );
  }

  late final _wire_run_wasm_func_mutPtr = _lookup<
      ffi.NativeFunction<
          WireSyncReturn Function(ffi.UintPtr,
              ffi.Pointer<wire_list_value_2>)>>('wire_run_wasm_func_mut');
  late final _wire_run_wasm_func_mut = _wire_run_wasm_func_mutPtr.asFunction<
      WireSyncReturn Function(int, ffi.Pointer<wire_list_value_2>)>();

  WireSyncReturn wire_run_wasm_func_void(
    int pointer,
    ffi.Pointer<wire_list_value_2> params,
  ) {
    return _wire_run_wasm_func_void(
      pointer,
      params,
    );
  }

  late final _wire_run_wasm_func_voidPtr = _lookup<
      ffi.NativeFunction<
          WireSyncReturn Function(ffi.UintPtr,
              ffi.Pointer<wire_list_value_2>)>>('wire_run_wasm_func_void');
  late final _wire_run_wasm_func_void = _wire_run_wasm_func_voidPtr.asFunction<
      WireSyncReturn Function(int, ffi.Pointer<wire_list_value_2>)>();

  WireSyncReturn wire_compile_wasm_sync(
    ffi.Pointer<wire_uint_8_list> module_wasm,
  ) {
    return _wire_compile_wasm_sync(
      module_wasm,
    );
  }

  late final _wire_compile_wasm_syncPtr = _lookup<
      ffi.NativeFunction<
          WireSyncReturn Function(
              ffi.Pointer<wire_uint_8_list>)>>('wire_compile_wasm_sync');
  late final _wire_compile_wasm_sync = _wire_compile_wasm_syncPtr
      .asFunction<WireSyncReturn Function(ffi.Pointer<wire_uint_8_list>)>();

  void wire_compile_wasm(
    int port_,
    ffi.Pointer<wire_uint_8_list> module_wasm,
  ) {
    return _wire_compile_wasm(
      port_,
      module_wasm,
    );
  }

  late final _wire_compile_wasmPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(
              ffi.Int64, ffi.Pointer<wire_uint_8_list>)>>('wire_compile_wasm');
  late final _wire_compile_wasm = _wire_compile_wasmPtr
      .asFunction<void Function(int, ffi.Pointer<wire_uint_8_list>)>();

  void wire_call_wasm(
    int port_,
  ) {
    return _wire_call_wasm(
      port_,
    );
  }

  late final _wire_call_wasmPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Int64)>>(
          'wire_call_wasm');
  late final _wire_call_wasm =
      _wire_call_wasmPtr.asFunction<void Function(int)>();

  void wire_add(
    int port_,
    int a,
    int b,
  ) {
    return _wire_add(
      port_,
      a,
      b,
    );
  }

  late final _wire_addPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Int64, ffi.Int64, ffi.Int64)>>('wire_add');
  late final _wire_add =
      _wire_addPtr.asFunction<void Function(int, int, int)>();

  void wire_call_function__method__WasmiInstanceId(
    int port_,
    ffi.Pointer<wire_WasmiInstanceId> that,
    ffi.Pointer<wire_uint_8_list> name,
  ) {
    return _wire_call_function__method__WasmiInstanceId(
      port_,
      that,
      name,
    );
  }

  late final _wire_call_function__method__WasmiInstanceIdPtr = _lookup<
          ffi.NativeFunction<
              ffi.Void Function(ffi.Int64, ffi.Pointer<wire_WasmiInstanceId>,
                  ffi.Pointer<wire_uint_8_list>)>>(
      'wire_call_function__method__WasmiInstanceId');
  late final _wire_call_function__method__WasmiInstanceId =
      _wire_call_function__method__WasmiInstanceIdPtr.asFunction<
          void Function(int, ffi.Pointer<wire_WasmiInstanceId>,
              ffi.Pointer<wire_uint_8_list>)>();

  WireSyncReturn wire_call_function_with_args_sync__method__WasmiInstanceId(
    ffi.Pointer<wire_WasmiInstanceId> that,
    ffi.Pointer<wire_uint_8_list> name,
    ffi.Pointer<wire_list_value_2> args,
  ) {
    return _wire_call_function_with_args_sync__method__WasmiInstanceId(
      that,
      name,
      args,
    );
  }

  late final _wire_call_function_with_args_sync__method__WasmiInstanceIdPtr =
      _lookup<
              ffi.NativeFunction<
                  WireSyncReturn Function(
                      ffi.Pointer<wire_WasmiInstanceId>,
                      ffi.Pointer<wire_uint_8_list>,
                      ffi.Pointer<wire_list_value_2>)>>(
          'wire_call_function_with_args_sync__method__WasmiInstanceId');
  late final _wire_call_function_with_args_sync__method__WasmiInstanceId =
      _wire_call_function_with_args_sync__method__WasmiInstanceIdPtr.asFunction<
          WireSyncReturn Function(ffi.Pointer<wire_WasmiInstanceId>,
              ffi.Pointer<wire_uint_8_list>, ffi.Pointer<wire_list_value_2>)>();

  void wire_call_function_with_args__method__WasmiInstanceId(
    int port_,
    ffi.Pointer<wire_WasmiInstanceId> that,
    ffi.Pointer<wire_uint_8_list> name,
    ffi.Pointer<wire_list_value_2> args,
  ) {
    return _wire_call_function_with_args__method__WasmiInstanceId(
      port_,
      that,
      name,
      args,
    );
  }

  late final _wire_call_function_with_args__method__WasmiInstanceIdPtr =
      _lookup<
              ffi.NativeFunction<
                  ffi.Void Function(
                      ffi.Int64,
                      ffi.Pointer<wire_WasmiInstanceId>,
                      ffi.Pointer<wire_uint_8_list>,
                      ffi.Pointer<wire_list_value_2>)>>(
          'wire_call_function_with_args__method__WasmiInstanceId');
  late final _wire_call_function_with_args__method__WasmiInstanceId =
      _wire_call_function_with_args__method__WasmiInstanceIdPtr.asFunction<
          void Function(int, ffi.Pointer<wire_WasmiInstanceId>,
              ffi.Pointer<wire_uint_8_list>, ffi.Pointer<wire_list_value_2>)>();

  WireSyncReturn wire_exports__method__WasmiInstanceId(
    ffi.Pointer<wire_WasmiInstanceId> that,
  ) {
    return _wire_exports__method__WasmiInstanceId(
      that,
    );
  }

  late final _wire_exports__method__WasmiInstanceIdPtr = _lookup<
          ffi.NativeFunction<
              WireSyncReturn Function(ffi.Pointer<wire_WasmiInstanceId>)>>(
      'wire_exports__method__WasmiInstanceId');
  late final _wire_exports__method__WasmiInstanceId =
      _wire_exports__method__WasmiInstanceIdPtr.asFunction<
          WireSyncReturn Function(ffi.Pointer<wire_WasmiInstanceId>)>();

  WireSyncReturn wire_instantiate_sync__method__WasmiModuleId(
    ffi.Pointer<wire_WasmiModuleId> that,
  ) {
    return _wire_instantiate_sync__method__WasmiModuleId(
      that,
    );
  }

  late final _wire_instantiate_sync__method__WasmiModuleIdPtr = _lookup<
          ffi.NativeFunction<
              WireSyncReturn Function(ffi.Pointer<wire_WasmiModuleId>)>>(
      'wire_instantiate_sync__method__WasmiModuleId');
  late final _wire_instantiate_sync__method__WasmiModuleId =
      _wire_instantiate_sync__method__WasmiModuleIdPtr.asFunction<
          WireSyncReturn Function(ffi.Pointer<wire_WasmiModuleId>)>();

  void wire_instantiate__method__WasmiModuleId(
    int port_,
    ffi.Pointer<wire_WasmiModuleId> that,
  ) {
    return _wire_instantiate__method__WasmiModuleId(
      port_,
      that,
    );
  }

  late final _wire_instantiate__method__WasmiModuleIdPtr = _lookup<
          ffi.NativeFunction<
              ffi.Void Function(ffi.Int64, ffi.Pointer<wire_WasmiModuleId>)>>(
      'wire_instantiate__method__WasmiModuleId');
  late final _wire_instantiate__method__WasmiModuleId =
      _wire_instantiate__method__WasmiModuleIdPtr
          .asFunction<void Function(int, ffi.Pointer<wire_WasmiModuleId>)>();

  WireSyncReturn wire_get_module_imports__method__WasmiModuleId(
    ffi.Pointer<wire_WasmiModuleId> that,
  ) {
    return _wire_get_module_imports__method__WasmiModuleId(
      that,
    );
  }

  late final _wire_get_module_imports__method__WasmiModuleIdPtr = _lookup<
          ffi.NativeFunction<
              WireSyncReturn Function(ffi.Pointer<wire_WasmiModuleId>)>>(
      'wire_get_module_imports__method__WasmiModuleId');
  late final _wire_get_module_imports__method__WasmiModuleId =
      _wire_get_module_imports__method__WasmiModuleIdPtr.asFunction<
          WireSyncReturn Function(ffi.Pointer<wire_WasmiModuleId>)>();

  WireSyncReturn wire_get_module_exports__method__WasmiModuleId(
    ffi.Pointer<wire_WasmiModuleId> that,
  ) {
    return _wire_get_module_exports__method__WasmiModuleId(
      that,
    );
  }

  late final _wire_get_module_exports__method__WasmiModuleIdPtr = _lookup<
          ffi.NativeFunction<
              WireSyncReturn Function(ffi.Pointer<wire_WasmiModuleId>)>>(
      'wire_get_module_exports__method__WasmiModuleId');
  late final _wire_get_module_exports__method__WasmiModuleId =
      _wire_get_module_exports__method__WasmiModuleIdPtr.asFunction<
          WireSyncReturn Function(ffi.Pointer<wire_WasmiModuleId>)>();

  void wire_executions__method__WasmiModuleId(
    int port_,
    ffi.Pointer<wire_WasmiModuleId> that,
  ) {
    return _wire_executions__method__WasmiModuleId(
      port_,
      that,
    );
  }

  late final _wire_executions__method__WasmiModuleIdPtr = _lookup<
          ffi.NativeFunction<
              ffi.Void Function(ffi.Int64, ffi.Pointer<wire_WasmiModuleId>)>>(
      'wire_executions__method__WasmiModuleId');
  late final _wire_executions__method__WasmiModuleId =
      _wire_executions__method__WasmiModuleIdPtr
          .asFunction<void Function(int, ffi.Pointer<wire_WasmiModuleId>)>();

  void wire_dispose__method__WasmiModuleId(
    int port_,
    ffi.Pointer<wire_WasmiModuleId> that,
  ) {
    return _wire_dispose__method__WasmiModuleId(
      port_,
      that,
    );
  }
